adding google login

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ MAIL_SMTP_PORT=587
 MAIL_SMTP_USER=kunal@sppl.ind.in
 MAIL_SMTP_PASS=SPPL@KUNAL1
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_BACKEND_URL=http://192.168.1.48:8000
+GOOGLE_ID=605622970388-jos89fmacattlrgj1pu7ultb95beiu1s.apps.googleusercontent.com
+GOOGLE_SECRET=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
