--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^38.1.1",
     "@ckeditor/ckeditor5-react": "^6.1.0",
+    "@react-oauth/google": "^0.7.3",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.2",
     "@types/nodemailer": "^6.4.9",
