--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ MAIL_SMTP_PASS=SPPL@KUNAL1
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 GOOGLE_ID=605622970388-jos89fmacattlrgj1pu7ultb95beiu1s.apps.googleusercontent.com
 GOOGLE_SECRET=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
+NEXT_PUBLIC_RAZORPAY_SECRET_ID=rzp_test_7qQwJuYZF5yCNv
+RAZORPAY_SECRET_ID=rzp_test_7qQwJuYZF5yCNv
+RAZORPAY_SECRET_KEY=0bSHBzXWuzqE22fHmRrMvLFf
