--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.2",
     "@types/nodemailer": "^6.4.9",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
     "autoprefixer": "10.4.14",
     "bcryptjs": "^2.4.3",
     "csvtojson": "^2.0.10",
     "dompurify": "^3.0.6",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "eslint-config-next": "^14.0.4",
     "exceljs": "^4.3.0",
     "js-file-downloader": "^1.1.25",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "mongoose": "^7.3.4",
-    "next": "13.4.10",
+    "next": "^14.0.4",
     "nodemailer": "^6.9.4",
     "nodemailer-express-handlebars": "^6.1.0",
     "postcss": "8.4.26",
     "razorpay": "^2.9.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
