--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ckeditor/ckeditor5-build-classic": "^40.0.0",
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@headlessui/react": "^1.7.17",
+    "@react-email/components": "^0.0.12",
+    "@react-email/render": "0.0.10",
     "@react-oauth/google": "^0.7.3",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.2",
