--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^6.9.4",
     "nodemailer-express-handlebars": "^6.1.0",
     "postcss": "8.4.26",
+    "puppeteer": "^21.7.0",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
