--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-number-format": "^5.3.1",
     "react-paginate": "^8.2.0",
     "react-select": "^5.7.5",
     "sweetalert2": "^11.7.31",
