--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "mongoose": "^7.3.4",
-    "next": "^14.0.4",
+    "next": "14.1.0",
     "nodemailer": "^6.9.4",
     "nodemailer-express-handlebars": "^6.1.0",
     "postcss": "8.4.26",
