--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8001",
+    "dev": "next dev -p 5001",
     "build": "next build",
-    "start": "next start -p 8001",
+    "start": "next start -p 5001",
     "lint": "next lint"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.0.0",
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@headlessui/react": "^1.7.17",
+    "@next/third-parties": "^14.1.0",
     "@react-email/components": "^0.0.12",
     "@react-email/render": "0.0.10",
     "@react-oauth/google": "^0.7.3",
