--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-number-format": "^5.3.1",
     "react-paginate": "^8.2.0",
     "react-select": "^5.7.5",
+    "sharp": "^0.33.2",
     "sweetalert2": "^11.7.31",
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
