--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/dompurify": "^3.0.3",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.11",
+    "@types/uuid": "^9.0.8"
   }
 }
