--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".next/types/app/page.txs", "src/app/backend-dashboard/category/list-category/page.jsx", "src/app/backend-dashboard/product/list-product/page.jsx", "src/app/backend-dashboard/banner/list/page.jsx", "src/app/backend/backend-dashboard/pages/custom-product/list/page.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".next/types/app/page.txs", "src/app/backend-dashboard/category/list-category/page.jsx", "src/app/backend-dashboard/product/list-product/page.jsx", "src/app/backend-dashboard/banner/list/page.jsx", "src/app/backend/backend-dashboard/pages/custom-product/list/page.jsx", "src/components/front/product/RazorpayOffer.js"],
   "exclude": ["node_modules"]
 }
