--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-paginate": "^8.2.0",
     "react-select": "^5.7.5",
     "sharp": "^0.33.2",
+    "slugify": "^1.6.6",
     "sweetalert2": "^11.7.31",
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
